--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "wavefunctioncollapse",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "jest",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,10 @@
   "homepage": "https://github.com/rahul-kum4w4t/WaveFunctionCollapse#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1"
   }
 }
